--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="MyReads App"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
-    <title>React App</title>
+    <title>MyReads</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
